# HID2UART

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  capture_manager.py  core.py  main.py  protocol.py  pyproject.toml  requirements.txt
input/: __init__.py  gamepad_capture.py  keyboard_capture.py  mouse_capture.py
ui/: __init__.py  main_window.py  monitor_panel.py  serial_panel.py
utils/: __init__.py  crc8.py  logging_config.py
